# fastapi-test-1

./: .env  Dockerfile  Makefile  ProjectTaskDescription.md  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: dependencies.py  users.py
src/db/: db.py
src/repositories/: users.py
src/schemas/: users.py
src/services/: users.py
src/utils/: repository.py
users_crm/: config.py  main.py
users_crm/api/: auth.py  dependencies.py  routers.py  users.py
users_crm/db/: mongo_motor.py
users_crm/repositories/: abstract.py  mongo_motor.py  rabbit_mq.py  users.py
users_crm/repositories/abstract/: msg_broker.py  nosql.py
users_crm/schemas/: auth.py  types.py  users.py
users_crm/services/: auth.py  users.py
