[tool.poetry]
name = "fastapimongo"
version = "0.1.0"
description = "MiniCRM test app"
authors = ["Denys Filipovskyi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.6.0"
pydantic = {extras = ["email"], version = "^2.10.2"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
rabbitmq = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
