[tool.poetry]
name = "fastapimongo"
version = "0.1.0"
description = "MiniCRM test app"
authors = ["Denys Filipovskyi"]
readme = "README.md"


[tool.flake8]
max-line-length = 100


[tool.isort]
line_length = 100



[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"


[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.6.0"
pydantic = {extras = ["email"], version = "^2.10.2"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
rabbitmq = "^0.2.0"
pydantic-settings = "^2.6.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.19"
aio-pika = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
